2018-06-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mpc.c (ReadMPCImage): Detect end of file while reading
	image directory.  Similar to MIFF fixes for ImageMagick
	CVE-2017-18272.
	(RegisterMPCImage): Require seekable stream since MPC is strictly
	a file-based format and so GetBlobSize() is assured to work.
	Similar to MIFF behavior.  Claimed to be part of the resolution
	for ImageMagick CVE CVE-2017-11449. Suggested by Petr Gajdos via
	email on January 3, 2018.

2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Detect end of file while reading
	image directory. Fixes SourceForge issue 565 "ImageMagick
	CVE-2017-18272 applies to GraphicsMagick".  Thanks to Petr Gajdos
	for reporting this issue to us.

	* magick/import.c (ImportViewPixelArea): Use appropriate
	bits_per_sample validations for FloatQuantumSampleType. Fixes
	oss-fuzz 8780 "graphicsmagick/coder_PTIF_fuzzer:
	Use-of-uninitialized-value in HorizontalFilter". (Credit to
	OSS-Fuzz)

2018-06-09  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* coders/mat.c More than 4GiB are not supported in MAT!

2018-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/mat.c (ReadMATImage): Add casts to avoid arithmetic
	overflow when computing size and offsets.  Fixes oss-fuzz 8801
	"graphicsmagick/coder_MAT_fuzzer: Timeout in
	graphicsmagick_coder_MAT_fuzzer". (Credit to OSS-Fuzz)

	* magick/blob.c (ReadBlobLSBDoubles, ReadBlobMSBDoubles): Only
	byte-swap doubles or test doubles for NAN if we have read enough
	bytes for at least one double value.
	(ReadBlob): Add an assertion to enforce that ReadBlob() will never
	report reading more bytes than requested due to some
	implementation issue.

2018-06-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (ReadBlob, WriteBlob): gzread(), BZ2_bzread(),
	gzwrite(), BZ2_bzwrite() return type 'int' rather than 'size_t'
	like their stdio equivalents.  Use correct signed type to avoid