@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180610"
-#define public MagickPackageReleaseDate "snapshot-20180610"
+#define public MagickPackageVersionAddendum ".020180611"
+#define public MagickPackageReleaseDate "snapshot-20180611"
